// file: proto/gcommon/v2/common/check_type.proto
// version: 1.0.1
// guid: 38e1041c-a418-4fe7-8834-b48f3c71f401
edition = "2023";

package common.v2;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/common/v2";

/**
 * CheckType indicates the type of health check
 */
enum CheckType {
  // Unspecified check type
  CHECK_TYPE_UNSPECIFIED = 0;
  // Liveness check
  CHECK_TYPE_LIVENESS = 1;
  // Readiness check
  CHECK_TYPE_READINESS = 2;
  // Startup check
  CHECK_TYPE_STARTUP = 3;
  // Component check
  CHECK_TYPE_COMPONENT = 4;
  // Dependency check
  CHECK_TYPE_DEPENDENCY = 5;
}
