// file: pkg/health/proto/remediation_details.proto
edition = "2023";

package gcommon.v1.health;

import "google/protobuf/go_features.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/health/proto";

/**
 * RemediationDetails provides information about health remediation actions
 */
message RemediationDetails {
  // Type of remediation action
  string action_type = 1;
  // Description of the remediation action
  string description = 2;
  // Whether automatic remediation is enabled
  bool auto_remediation_enabled = 3;
  // Maximum number of remediation attempts
  int32 max_attempts = 4;
  // Current attempt count
  int32 current_attempts = 5;
  // Last remediation timestamp
  int64 last_attempt_timestamp = 6;
  // Whether remediation was successful
  bool success = 7;
  // Error message if remediation failed
  string error_message = 8;
}
